# ukr_g2p

./: .gitignore  Dockerfile  LICENSE.md  Procfile  README.md  pyproject.toml  requirements.txt
docs/: architechture.txt  phonology.txt
scripts/: checkpoint.py  create_gold_dataset.py  create_silver_dataset.py  evaluation.py  model_test.py  run.py
src/ukr_g2p/: __init__.py  annotate.py  cli.py  devoice_exceptions.py  exceptions.py  mappings.py  modifications.py  modifications_helpers.py  normalise.py  parse_engine.py  parser.py  phonemas.py  pipeline.py  render.py  render_engine.py  rules_engine.py  stress.py  syllables.py  symbols.py  token.py  tokenizer.py  utils.py
training/: README.txt  byT5.py
web/: README.txt  app.py  instruction.txt  light_stress.py  requirements.txt
web/static/: index.html
