[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ukr-g2p"
version = "0.1.0"
description = "A rule-based Ukrainian grapheme-to-phoneme / phonetic transcription engine"
requires-python = ">=3.9"
dependencies = [
    "ukrainian-word-stress>=1.0",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
    "gunicorn>=21.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ukr-g2p = "ukr_g2p.cli:main"
